# rlplg

./: .bumpversion.cfg  .gitignore  MANIFEST.in  Makefile  README.md  dev-requirements.in  dev-requirements.txt  docs-requirements.in  docs-requirements.txt  mkdocs.yml  mypy.ini  pyproject.toml  rendering-requirements.in  rendering-requirements.txt  requirements.in  requirements.txt  setup.cfg  setup.py  test-requirements.in  test-requirements.txt  tox.ini
.github/workflows/: python-bumpversion.yml  python-main.yml  python-master.yml  python-package.yml  python-pull-request.yml
docs/: dev.md  index.md
docs/envs/: abcseq.md  gridworld.md  iceworld.md  redgreen.md  staterandomwalk.md  tarifffrozenlake-v1.md  template.md  towerofhanoi.md
sbin/: run-examples.sh
sbin/commit_hooks/: sync-versions.sh
sbin/cpr/: run-env.sh
sbin/explain/: run-gridworld.sh
src/rlplg/: __init__.py  combinatorics.py  core.py  envdesc.py  envplay.py  envspec.py  envsuite.py  export.py  gymenv.py  metrics.py  npsci.py  runtime.py  tracking.py
src/rlplg/environments/: abcseq.py  gridworld.py  iceworld.py  randomwalk.py  redgreen.py  towerhanoi.py
src/rlplg/environments/alphabet/: constants.py  env.py
src/rlplg/environments/gridworld/: constants.py  env.py  rendering.py  utils.py
src/rlplg/environments/randomwalk/: constants.py  env.py
src/rlplg/environments/redgreen/: constants.py  env.py
src/rlplg/examples/: abcseq_control_qlearning.py  abcseq_eval_first_visit_monte_carlo.py  abcseq_play_random_policy.py  alphabet_control_qlearning.py  alphabet_eval_first_visit_monte_carlo.py  alphabet_eval_nstep_sarsa.py  alphabet_eval_sarsa.py  alphabet_play_random_policy.py  control_qlearning.py  factories.py  gridworld_control_qlearning.py  gridworld_dynamicprog.py  gridworld_play_random_policy.py  gym_cliffwalking_control_qlearning.py  gym_frozenlake_control_qlearning.py  qlearning.py  redgreen_control_qlearning.py  rendering.py
src/rlplg/learning/: utils.py
src/rlplg/learning/approx/: approxeval.py  modelspec.py
src/rlplg/learning/approx/evaluation/: onpolicy.py
src/rlplg/learning/opt/: schedules.py
src/rlplg/learning/tabular/: dynamicprog.py  empiricmdp.py  markovdp.py  policies.py  policycontrol.py  policyeval.py  tools.py
src/rlplg/learning/tabular/control/: onpolicy.py
src/rlplg/learning/tabular/evaluation/: offpolicy.py  onpolicy.py
tests/: defaults.py
tests/rlplg/: asserts.py  dynamics.py  playground.py  test_combinatorics.py  test_envplay.py  test_envsuite.py  test_export.py  test_metrics.py  test_npsci.py  test_runtime.py  test_tracking.py
tests/rlplg/environments/: dynamics.py  grids.py  test_abcseq.py  test_gridworld.py  test_iceworld.py  test_randomwalk.py  test_redgreen.py  test_towerhanoi.py  worlds.py
tests/rlplg/environments/alphabet/: test_env.py
tests/rlplg/environments/gridworld/: grids.py  test_env.py  test_rendering.py
tests/rlplg/environments/randomwalk/: test_env.py
tests/rlplg/environments/redgreen/: test_env.py
tests/rlplg/learning/: test_utils.py
tests/rlplg/learning/approx/: test_modelspec.py
tests/rlplg/learning/opt/: test_schedules.py
tests/rlplg/learning/tabular/: test_dynamicprog.py  test_empiricmdp.py  test_policies.py  test_policyeval.py  test_tools.py
tests/rlplg/learning/tabular/evaluation/: test_offpolicy.py  test_onpolicy.py
